<resources>
    <string name="long_arrow"></string>
    <string name="exchange_text">"%.1f -> %.1f"</string>
    <string name="buy_chart_text">"Buy 1.0 %s"</string>
    <string name="sell_chart_text">"Sell 1.0 %s"</string>
    <string name="receive_chart_text">"for %.1f Chaos Orbs"</string>
    <string name="open_wiki_button_text">Go to Wiki page</string>
    <string name="overview_name_header">Name</string>
    <string name="overview_header_pay">Pay</string>
    <string name="overview_header_get">Get</string>
    <string name="overview_metrics_header">Last 7 days</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="overview_list_empty_placeholder">Overview list is empty</string>
    <string name="item_filter_hint">Enter item name…</string>
    <string name="info">Info</string>
    <string name="charts">Charts</string>
    <string name="add_notification">Add notification</string>
    <string name="additional_data_header">Last 7 days</string>
    <string name="no_data">No data</string>
    <string name="currency_title">Select currency</string>
</resources>