<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <include layout="@layout/charts_feature_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/overview_list_header"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_header"
            app:constraint_referenced_ids="label,exchangeText,totalChange"
            app:layout_constraintTop_toBottomOf="@id/filter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/overview_name_header"
            android:textColor="@color/primaryTextColor" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/exchangeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            app:constraint_referenced_ids="payText,getText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/payText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/overview_header_pay"
            android:textColor="@color/primaryTextColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/getText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/overview_header_get"
            android:textColor="@color/primaryTextColor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/overview_metrics_header"
            android:textColor="@color/primaryTextColor" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/default_bordered_background"
            android:hint="@string/empty_hint"
            android:padding="8dp"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/transparent"
                android:drawableEnd="@drawable/filter_24"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center|center_vertical"
                android:hint="@string/item_filter_hint"
                android:inputType="textNoSuggestions"
                android:padding="0dp"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/secondaryLightColor"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/overview_list_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview_list_header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/overview_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/emptyPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/fontinsmallcaps"
                android:gravity="center"
                android:text="@string/overview_list_empty_placeholder"
                android:textColor="@color/primaryTextColor"
                android:textSize="24sp" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>