<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/itemImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/itemLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/primaryTextColor"
        android:textSize="22sp"
        app:fontFamily="@font/fontinsmallcaps"
        app:layout_constraintBottom_toBottomOf="@id/itemImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemImage"
        app:layout_constraintTop_toTopOf="@id/itemImage" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/additional_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="addNotification,goToWiki"
        app:flow_horizontalStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/itemImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goToWiki"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@null"
        android:drawableEnd="@drawable/open_link_24"
        android:drawablePadding="4dp"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/open_wiki_button_text"
        android:textColor="@color/primaryTextColor"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addNotification"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@null"
        android:drawableStart="@drawable/add_notification_24"
        android:drawablePadding="4dp"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/add_notification"
        android:textColor="@color/primaryTextColor"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/buyData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        app:constraint_referenced_ids="leftSideBuyText,leftSideBuyImage,rightSideBuyText,rightSideBuyImage"
        app:flow_horizontalGap="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additional_buttons" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/leftSideBuyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        app:fontFamily="@font/fontinsmallcaps" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rightSideBuyImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/chaos_icon"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rightSideBuyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        app:fontFamily="@font/fontinsmallcaps" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/leftSideBuyImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/additional_buy_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:constraint_referenced_ids="buying_additional_data_header,buying_chart_container,buying_additional_data_change"
        app:flow_horizontalGap="16dp"
        app:layout_constraintTop_toBottomOf="@id/buyData" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buying_additional_data_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:text="@string/additional_data_header"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/buying_chart_container"
        android:layout_width="0dp"
        android:layout_height="50dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/buying_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buying_chart_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/buying_additional_data_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/buyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/exchange_24"
        app:layout_constraintTop_toBottomOf="@id/additional_buy_data" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/sellData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:constraint_referenced_ids="leftSideSellText,leftSideSellImage,rightSideSellText,rightSideSellImage"
        app:flow_horizontalGap="8dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintTop_toBottomOf="@id/buyButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/leftSideSellText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        app:fontFamily="@font/fontinsmallcaps" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/leftSideSellImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rightSideSellImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/chaos_icon"
        tools:ignore="ContentDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rightSideSellText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="14sp"
        app:fontFamily="@font/fontinsmallcaps" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/additional_sell_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:constraint_referenced_ids="selling_additional_data_header,selling_chart_container,selling_additional_data_change"
        app:flow_horizontalGap="16dp"
        app:layout_constraintTop_toBottomOf="@id/sellData" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selling_additional_data_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:text="@string/additional_data_header"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/selling_chart_container"
        android:layout_width="0dp"
        android:layout_height="50dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/selling_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selling_chart_no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fontinsmallcaps"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/selling_additional_data_change"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fontinsmallcaps"
        android:gravity="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/sellButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/exchange_24"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/additional_sell_data" />
</androidx.constraintlayout.widget.ConstraintLayout>